-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.5.0
-
All
qtouchevent.pro is missing CONFIG+=testcase and thus make check always succeeded. tests have been rotting over time.
- Crashed on Windows in deleteInRawEventTranslation
- Crashes on OS X in touchUpdateAndEndNeverPropagate
********* Start testing of tst_QTouchEvent ********* Config: Using QtTest library 5.5.0, Qt 5.5.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 4.8.2) PASS : tst_QTouchEvent::initTestCase() PASS : tst_QTouchEvent::touchDisabledByDefault() FAIL! : tst_QTouchEvent::touchEventAcceptedByDefault() 'touchEvent.isAccepted()' returned FALSE. () Loc: [tst_qtouchevent.cpp(322)] PASS : tst_QTouchEvent::touchBeginPropagatesWhenIgnored() PASS : tst_QTouchEvent::touchUpdateAndEndNeverPropagate() FAIL! : tst_QTouchEvent::basicRawEventTranslation() 'touchWidget.seenTouchBegin' returned FALSE. () Loc: [tst_qtouchevent.cpp(633)] FAIL! : tst_QTouchEvent::multiPointRawEventTranslationOnTouchScreen() 'leftWidget.seenTouchBegin' returned FALSE. () Loc: [tst_qtouchevent.cpp(776)] FAIL! : tst_QTouchEvent::multiPointRawEventTranslationOnTouchPad() 'leftWidget.seenTouchBegin' returned FALSE. () Loc: [tst_qtouchevent.cpp(1006)] FAIL! : tst_QTouchEvent::deleteInEventHandler() 'res && touchUpdateEvent.isAccepted() && !child1' returned FALSE. () Loc: [tst_qtouchevent.cpp(1313)] FAIL! : tst_QTouchEvent::deleteInRawEventTranslation() 'pl.isNull() && !pc.isNull() && !pr.isNull()' returned FALSE. () Loc: [tst_qtouchevent.cpp(1401)] PASS : tst_QTouchEvent::crashInQGraphicsSceneAfterNotHandlingTouchBegin() PASS : tst_QTouchEvent::touchBeginWithGraphicsWidget() PASS : tst_QTouchEvent::testQGuiAppDelivery() PASS : tst_QTouchEvent::testMultiDevice() PASS : tst_QTouchEvent::cleanupTestCase() Totals: 9 passed, 6 failed, 0 skipped, 0 blacklisted ********* Finished testing of tst_QTouchEvent *********
- is required for
-
QTQAINFRA-1949 Remove insignificant tests in Qt
-
- Withdrawn
-
- relates to
-
QTBUG-99489 tst_QTouchEvent::multiPointRawEventTranslationOnTouchPad is flaky on MacOS 10.15
-
- Closed
-
For Gerrit Dashboard: QTBUG-46266 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
112821,3 | Fix a crash in tst_QTouchEvent::deleteInRawEventTranslation(). | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |
112826,8 | Reanimate test gui/kernel/qtouchevent/tst_qtouchevent. | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |
113390,3 | Stabilize tst_qtouchevent. | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |
239546,3 | Remove insignificant flag from qtouchevent.pro | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |
301583,34 | Refactor pointer event hierarchy | dev | qt/qtbase | Status: MERGED | +2 | 0 |
305084,9 | WIP add mutable subclasses for QInputEvent classes | dev | qt/qtbase | Status: ABANDONED | -2 | 0 |