Fix a crash in tst_QTouchEvent::deleteInRawEventTranslation().

The test deletes a widget in QEvent::TouchBegin.

This is part of a series of patches to revive the test; it is currently
not run since tests/auto/gui/kernel/qtouchevent/qtouchevent.pro
is missing CONFIG += testcase.

Task-number: QTBUG-46266
Change-Id: I65c0a431ff1807133438764dd8b3c16bb9cb6743
Reviewed-by: Caroline Chao <caroline.chao@theqtcompany.com>

cregit: 6794319bbdba69beb7baaff46520f3be15a1d490 https://github.com/qt/qtbase/commit/6794319bbdba69beb7baaff46520f3be15a1d490